Update:volunter changed to user

--- a/public/user/user.html
+++ b/public/user/user.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Volunteer Dashboard - ReliefNet</title>
-    <link rel="stylesheet" href="volunter.css">
+    <link rel="stylesheet" href="user.css">
 </head>
 <body>
     <div class="container">
