Volunteer data added

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="#">Dashboard</a></li>
                 <li><a href="/supply.html">Supply</a></li>
-                <li><a href="#">Orders</a></li>
+                <li><a href="/public/voluneteer.html">Volunteer</a></li>
                 <li><a href="#">Suppliers</a></li>
                 <li><a href="#">Reports</a></li>
                 <li><a href="#">Settings</a></li>
