--- a/public/voluneteer.html
+++ b/public/voluneteer.html
@@ -3,22 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Supply Items</title>
+    <title>Volunteer Details</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="tables" id="supply">
-        <h2>Supply Items</h2>
+        <h2>Volunteer Details</h2>
         <table>
             <thead>
                 <tr>
-                    <th>Item No</th>
-                    <th>Item Name</th>
-                    <th>Quantity</th>
-                    <th>Expiry</th>
-                    <th>Location</th>
                     <th>Volunteer ID</th>
-                    
+                    <th>Volunteer Name</th>
+                    <th>Location</th>
+                    <th>Category</th>
+                    <th>Location</th>
                 </tr>
             </thead>
             <tbody>
